--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
 <head>
   <title>Smit Kalariya Resume</title>
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+    }
+
+    embed {
+      width: 100%;
+      height: 100vh;
+      border: none;
+    }
+  </style>
 </head>
 <body>
   <embed src="Smit_Kalariya_Resume.pdf" type="application/pdf" width="100%" height="600px" />
